Add home hss ip + fqdn

--- a/etc/mme_fd.sprint.conf
+++ b/etc/mme_fd.sprint.conf
@@ -167,3 +167,4 @@ LoadExtension = "/usr/local/lib/freeDiameter/dict_S6c.fdx";
 # allows exactly this. 
 
 ConnectPeer= "@HSS_FQDN@" { ConnectTo = "@HSS_IP_ADDR@"; No_SCTP ; No_IPv6; Prefer_TCP; No_TLS; port = 3868;};
+ConnectPeer= "@HHSS_FQDN@" { ConnectTo = "@HHSS_IP_ADDR@"; No_SCTP ; No_IPv6; Prefer_TCP; No_TLS; port = 3868;};
